Added project Mitchell Art Gallery Art Bus App

--- a/index.html
+++ b/index.html
@@ -41,12 +41,74 @@
     <td width="100%" colspan=3 valign=top>
       <p align=left>
       <i>Description:</i><br>
+      <p>
       Collaborate with Edmonton Public Library to create an interactive game
       for the Milner Digital Wall. The project will follow the Agile methodology.
       The game will be available to the general public between 5-year-old and 100-year-old.
       The game design will satisfy a wide range of reading levels, languages,
       abilities, and expectations.
       The game's content can be educational, informational, or just for fun.
+      <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="100%" colspan=3 valign=top>
+      <p align=left>
+      <i>Prerequisites/Nice to Have:</i><br>
+      <ul>
+        <li>Experience with Unity or willing to learn Unity.
+      </ul>
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td width="100%" colspan=3 valign=top style="height:3px">
+      <p height=5></p>
+    </td>
+  </tr>
+
+
+  <!-- Mitchell Art Gallery Art Bus App -->
+  <tr>
+    <td width="40%" valign=top>
+      <p align=left>Mitchell Art Gallery Art Bus App</p>
+    </td>
+    <td width="40%" valign=top>
+      <p align=left>Candy Pang &lt;candy.pang@macewan.ca&gt;</p>
+    </td>
+    <td width="20%" valign=top>
+      <p align=left>2025-05-27</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="100%" colspan=3 valign=top>
+      <p align=left>
+      <i>Description:</i><br>
+      <p>
+      The project is iniiated by McKenzy Ison
+      McKenzy Ison &lt;isond@mymacewan.ca&gt; initiates the project.
+      <p>
+	  Mitchell Art Gallery (MAG) in Allard Hall has an 'Art Bus' project.
+	  Late March each year, MAG charters multiple Edmonton Transit Service (ETS)
+	  buses to carry people between a selection of downtown art galleries.
+	  It isn't easy to keep track of the buses.
+	  MAG would like to have a Capstone project to get 'live'
+	  updates on where each bus is located on the circuit.
+      <p>
+	  If any student teams are interested in this project,
+	  please get in touch with Candy for further discussion.
+	  Student teams may find their supervisors for this project.
+	  Multiple teams are welcome.
+      <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="100%" colspan=3 valign=top>
+      <p align=left>
+      <i>Prerequisites/Nice to Have:</i><br>
+      <ul>
+        <li>Willingness to explore different technologies and possibilities.
+      </ul>
       </p>
     </td>
   </tr>
@@ -73,7 +135,19 @@
     <td width="100%" colspan=3 valign=top>
       <p align=left>
       <i>Description:</i><br>
+      <p>
       &lt;Project description&gt;
+      <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr>
+    <td width="100%" colspan=3 valign=top>
+      <p align=left>
+      <i>Prerequisites/Nice to Have:</i><br>
+      <ul>
+        <li>Nice to have knowledge 1
+        <li>Nice to have knowledge 2
+      </ul>
       </p>
     </td>
   </tr>
