--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p align=left>
       <i>Description:</i><br>
       <p>
-      The project is iniiated by McKenzy Ison
+      The project is initiated by McKenzy Ison
       McKenzy Ison &lt;isond@mymacewan.ca&gt; initiates the project.
       <p>
 	  Mitchell Art Gallery (MAG) in Allard Hall has an 'Art Bus' project.
