--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p align=left>
       <i>Description:</i><br>
       <p>
-      Collaborate with Edmonton Public Library to create an interactive game
+      Collaborate with the Edmonton Public Library to create an interactive game
       for the Milner Digital Wall. The project will follow the Agile methodology.
       The game will be available to the general public between 5-year-old and 100-year-old.
       The game design will satisfy a wide range of reading levels, languages,
@@ -85,8 +85,7 @@
       <p align=left>
       <i>Description:</i><br>
       <p>
-      The project is initiated by McKenzy Ison
-      McKenzy Ison &lt;isond@mymacewan.ca&gt; initiates the project.
+      McKenzy Ison &lt;isond@mymacewan.ca&gt; initiates this project.
       <p>
 	  Mitchell Art Gallery (MAG) in Allard Hall has an 'Art Bus' project.
 	  Late March each year, MAG charters multiple Edmonton Transit Service (ETS)
