Updated Art Bus App contact

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <p align=left>
       <i>Description:</i><br>
       <p>
-      McKenzy Ison &lt;isond@mymacewan.ca&gt; initiates this project.
+      Max Quilliam &lt;quilliamm3@macewan.ca&gt; initiates this project.
       <p>
 	  Mitchell Art Gallery (MAG) in Allard Hall has an 'Art Bus' project.
 	  Late March each year, MAG charters multiple Edmonton Transit Service (ETS)
